--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,10 @@
 :root{
     --max-width: 85%;
     --common-black: #3A3A3A;
+    --main-color: #E02C6D;
 }
+
+
 
 
 /*--------------------------- *\
@@ -31,11 +34,11 @@ body{
 .button{
     color: #FFFFFF;
     font-size: 16px;
-    background-color: #E02C6D;
+    background-color: var(--main-color);
     text-decoration: none;
     border-radius: 41px;
     padding: 8px 18px;
-    margin-top: 100px;
+  margin: 25px;
 }
 h1{
     font-size: 42px;
@@ -62,8 +65,9 @@ color: var(--common-black);
 
 
 
-
-
+/*-------------- *\
+      Header styles
+\*-----------------*/
 
 header{
     width: var(--max-width);
@@ -71,9 +75,11 @@ header{
    
 }
 
+/*---------------- 
+Menu bar Styling
+-------------------*/
 
-
-.menu-bar{
+ .menu-bar{
     display: flex;
      align-items: center;
      justify-content: space-between;
@@ -100,18 +106,22 @@ nav a{
 
 
 
-
+/*---------------- 
+hero section style 
+-------------------*/
 
 .hero-section{
-    display: flex;
-    justify-content: space-between;
-    margin: 80px 0;
+ display: grid;
+ grid-template-columns: repeat(2, 1fr);
+ grid-row-gap: 50px ;
+ padding: 100px 0;
    }
 
 
 .hero-content{
     height: 270px;
-    width: 45%;
+    
+    padding-left: 50px;
     padding-top: 25px;
     
 }
@@ -123,8 +133,24 @@ nav a{
 }
 .hero-img{
     height: 270px;
-    width: 45%;
 }
+
+
+.hero-section:hover .hero-content{
+    
+    transform: rotate(-360deg);
+    transition: transform 1s ease-in-out;
+  }
+  .hero-section:hover .button{
+    background-color: rgb(255, 0, 0);
+    padding: 12px 20px;
+}
+
+  .hero-section:hover .hero-img img{
+  transform: rotate(360deg);
+  transition: transform 1s ease-in-out;
+ }
+
 
 
 
@@ -133,9 +159,14 @@ nav a{
 
 
 /*-------------- *\
-       Main
+       Main  
 \*-----------------*/
 
+
+
+/*---------------- ----------
+ Brand  Logos section  styles
+----------------------------*/
 .logos{
 display: flex;
 justify-content: space-between;
@@ -143,7 +174,9 @@ justify-content: space-between;
 
 
 
-
+/*---------------- 
+   Popular Collection styles
+-------------------*/
 
 .collection-title{
 text-align: center;
@@ -154,6 +187,7 @@ margin: 100px 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
+ width: 85%;
 }
 
 .collection{
@@ -201,11 +235,115 @@ margin-top: 5px;
      letter-spacing: 0.018em;
      
  }
+ .redirector-text{
+     text-decoration: none;
+     color: var(--main-color);
+     font-weight: bold;
+     font-size: 16px;
+     line-height: 24px;
+     position: absolute;
+     right: 135px;
+     
+ }
+
+
+
+ /*---------------- 
+ Find influencers style
+-------------------*/
 
 
 
 
 
+
+ .find-influencers{
+     width: 60%;
+     margin: 0 auto;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+ }
+
+.find-influencers h1{
+    font-size: 38px;
+    color: var(--common-black);
+    font-weight: 900;
+}
+.find-influencers p{
+    color: gray;
+    font-size: 17px;
+    font-weight: 700;
+}
+
+
+ .special-text{
+     color: var(--main-color);
+ }
+ .request-demo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px 0;
+}
+
+.request-demo input{
+
+    color: var(--common-black);
+    font-weight: bold;
+    font-size: 25px;
+    background-color: rgb(245, 213, 213);
+    padding: 25px 120px;
+    border: 0px solid #FFFFFF;
+    border-radius: 40px;
+    }
+    .request-button{
+        color:  var(--main-color);
+        font-size: 16px;
+        background-color: #FFFFFF;
+        text-decoration: none;
+        border-radius: 41px;
+        padding: 12px 18px;
+        margin-top: 25px;
+        border: 1px solid  var(--main-color); 
+     }
+
+
+.create-account{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px 0;
+}
+.create-account input{
+    color: var(--common-black);
+    font-weight: bold;
+    font-size: 25px;
+    background-color: rgb(245, 213, 213);
+    padding: 25px 120px;
+    border: 0px solid #FFFFFF;
+    border-radius: 40px;
+}
+.create-button{
+    color:  var(--main-color);
+    font-size: 16px;
+    background-color: #FFFFFF;
+    text-decoration: none;
+    border-radius: 41px;
+    padding: 12px 18px;
+    margin-top: 25px;
+    border: 1px solid  var(--main-color); 
+}
+
+
+
+
+
+
+/*-------------- *\
+    Footer styles
+\*-----------------*/
 
  footer{
     width: 100%;
@@ -231,13 +369,15 @@ margin-top: 5px;
     }
     
 
-
+/* footer logos */
 .logo{
     color: #FFFFFF;
-    background: #969BAB;
     font-size: 22px;
     margin-right: 12px;
 }
+
+
+
 
 
 
@@ -260,8 +400,15 @@ margin-top: 5px;
 Mobile Optimization
 \*-----------------*/
 
+
+
 @media only screen and (max-width: 688px) {
-    .menu-bar{
+ /*-------------- 
+      Header styles
+      -----------------*/
+
+      /* menu bar */
+      .menu-bar{
         flex: column;
         justify-content: center;
         width: 90%;
@@ -271,19 +418,28 @@ Mobile Optimization
 }
 
 
+/* hero section */
 .hero-section{
-    flex-direction: column;
-    width: 80%;
-}
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 200px;
+    margin-bottom: 50px;
+   }
+
 
 .hero-content{
     width: 90%;
-    margin-bottom: 200px;
-}
-.hero-image img{
-width: 50%;
+    order: 2;
+    }
+.hero-image {
+    background-color: crimson;
+    order: 1;
+    margin-bottom: 100px;
 }
 
+
+/* Logos Section */
 
 .logos{
 
@@ -298,19 +454,22 @@ width: 50%;
 
 
 
+
+/*-------------- 
+      Main styles
+      -----------------*/
+
+      
+
 .collection-container{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
 }
 
 
-
-
-
-
-
-
-
+/*------------ 
+            footer styles 
+            ----------------------*/
 footer{
     width: 100%;
     }
@@ -330,40 +489,101 @@ Tablet Optimization
 
 @media only screen and (min-width: 689px) and (max-width: 992px) {
     
- 
+ /*-------------- 
+      Header styles
+      -----------------*/
 
+
+/* menu bar */
 .menu-bar{
     display: flex;
     justify-content: center;
-    font-size: 220px;
+
+
 }
+
+/* Navigation */
 nav{
     display: none;
 }
+
+
+/* hero section */
+
 .hero-section{
+    display: flex;
     flex-direction: column;
     justify-content: center;
-}
+    align-items: center;
+    padding-top: 0;
+    }
 
 .hero-content{
     width: 90%;
     margin-bottom: 70px;
-    order: 2;
+    order: 1;
     padding-top: 180px;
 
 }
-.hero-image{
-    width: 90%;
+
+.hero-img{
+    order: 2;
 }
 
 
 
 
+
+/*-------------- 
+      Main
+      -----------------*/
+
+      
 
 .collection-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
+
+.find-influencers{
+    display: none;
+}
+  
+
+
+footer{
+    position: relative;
+    bottom: 10px;;
+    width: 100%;
+    height: 270px;
+    background-color: hsl(240, 73%, 10%);
+    }
+    .footer-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 100px;
+    }
+    .footer-content h4{
+        color: #FFFFFF;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 36px;
+    }
+    .footer-content p{
+        font-size: 14px;
+        color: #D9DBE1;
+    }
+    
+
+.logo{
+    color: #FFFFFF;
+    font-size: 22px;
+    margin-right: 12px;
+}
+
+      
 
 
 }
